chore(config): clean gitignore and update render.yaml environment variables
- Removed redundant entries from .gitignore to simplify ignored files
- Updated render.yaml to generate SECRET_KEY dynamically
- Added PYTHON_VERSION 3.11.0 and WEB_CONCURRENCY 4 environment variables
- Removed DEBUG and DATABASE_URL keys from render.yaml environment variables list

--- a/render.yaml
+++ b/render.yaml
@@ -9,9 +9,9 @@ services:
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: buspass_project.settings
-      - key: DEBUG
-        value: False
       - key: SECRET_KEY
-        sync: true
-      - key: DATABASE_URL
-        sync: true
+        generateValue: true
+      - key: PYTHON_VERSION
+        value: 3.11.0
+      - key: WEB_CONCURRENCY
+        value: 4
