--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ asgiref==3.8.1
 charset-normalizer==3.4.4
 colorama==0.4.6
 django==4.2.27
-django-material-admin==1.8.6
+django-admin-interface==0.32.0
+django-colorfield==0.14.0
 djangorestframework==3.15.2
-dj-database-url==3.0.1
+gunicorn==22.0.0
+packaging==25.0
 pillow==10.4.0
 pypng==0.20220715.0
+python-decouple==3.8
+python-slugify==8.0.4
 qrcode==7.4.2
 reportlab==3.6.13
 sqlparse==0.5.5
+text-unidecode==1.3
 typing-extensions==4.13.2
 tzdata==2025.3
-gunicorn==22.0.0
-python-decouple==3.8
